# Hoerman_PI

./: CMakeLists.txt  README.md  config.yaml  hoer_read_status.cpp  hoermann.cpp  hoermann.h
data/: nacisniecie pilota zamkniecie  naciśnięcie pilota  wentylacja
include/: Config_manager.h  Mosquitto.h  USB_serial.h  hoermann.h  logger.h  read.h  vars.h
old_/: H_config.cpp  H_config.h  Mosquitto.cpp  Mosquitto.h  hoermann copy.cpp  hoermann.cpp  hoermann.h  vars.h
src/: Config_manager.cpp  Mosquitto.cpp  USB_serial.cpp  hoer_read_status.cpp  hoermann.cpp  logger.cpp  main.cpp  read.cpp
